--- a/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
+++ b/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
@@ -129,6 +129,10 @@
     "\n",
     "Those above statements created three variables - `x`, `pi`, and `message` - and assigned to them a reference to the value on the right side of the statement. Those values on the right-hand side are objects of their respective types (int, float, and string)\n",
     "\n",
+    "![](https://github.com/slankas/DataScienceNotebooks/blob/main/IntroductionToPython/images/variable_reference.png?raw=true)\n",
+    "\n",
+    "As you can see in diagram, the variable `message` points to an object stored in the computer's memory.  We call this \"link\" a reference and normally use the verb \"references\". As mentioned above,  In addition to tracking an object's state (the data an object contains), a Python object tracks an identifier, how many variables or other objects can refer to this variable, and the object's type.\n",
+    "\n",
     "Unlike equations in algebra or other advanced mathematics, programming languages typically cannot solve an assignment statement, even though they may appear capable. Instead, the interpreter evaluates the right side of the ~~equals sign~~assignment operator and then assigns the result to a variable on the left side of the assignment operator.\n",
     "\n",
     "\n",
