--- a/IntroductionToPython/06-Functions.ipynb
+++ b/IntroductionToPython/06-Functions.ipynb
@@ -591,7 +591,7 @@
    "metadata": {},
    "source": [
     "## The LEGB Rule\n",
-    "While not explicitly mentioned in the Python literature, The LEGB Rule is a mnemonic for how the Python interpreter searches the various namespaces for a particular item. As you can see from the diagram above with how namespaces enclose each other, the interpreter searches the namespaces in the following order:\n",
+    "While not explicitly mentioned in the Python literature, the LEGB Rule is a mnemonic for how the Python interpreter searches the various namespaces for a particular item. As you can see from the diagram above with how namespaces enclose each other, the interpreter searches the namespaces in the following order:\n",
     "1. Local\n",
     "2. Enclosing\n",
     "3. Global\n",
@@ -643,6 +643,7 @@
     "\"Call by value\"  evaluates the arguments and passes their actual values to the called function.[1]\n",
     "\n",
     "In \"call by reference\", the caller passes a reference (pointer) to the storage address of the actual parameter.[1]\n",
+    "A pointer is variable that contains an explicit memory address. As discussed in a previous notebook, a reference is a value that points to an object stored in the computer's memory.  Unlike pointers, we cannot directly access the value of a reference nor change the value of a reference.\n",
     "\n",
     "In some other languages, programmers can also pass the address of the actual variable to the function, giving the function an alias to that location.  Python (nor Java) does not provide this capability.\n",
     "\n",
@@ -882,6 +883,18 @@
     "- $r$ annual interest rate (as a decimal)\n",
     "- $k$ number of compounding periods\n",
     "- $N$ length of the loan in years"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51c1349c",
+   "metadata": {},
+   "source": [
+    "## Global Variables\n",
+    "\n",
+    "Generally speaking, global variables should not be used.  By having global variables, it becomes very difficult to track where changes occur and often leads to unintended side effects with functions.  Additionally, if the global variable can be read and written to by multiple threads, an inappropriate system state may be created where one thread has read an older or partially defined object while another thread is in the process of changing it.  \n",
+    "\n",
+    "Using global variables as constant value may be an appropriate use case, but generally we should place those within modules (which will be discussed later)."
    ]
   },
   {
