--- a/IntroductionToPython/10.5-RandomNumbers.ipynb
+++ b/IntroductionToPython/10.5-RandomNumbers.ipynb
@@ -231,7 +231,7 @@
     "\n",
     "Several use cases to set a seed: (note - these all involve reproducibility)\n",
     "1.\tSoftware development - The system will have consistent behavior and output using a seed with random numbers.\n",
-    "2.\tStatistic analysis - By sharing the seed, others can replicate and verify the results.\n",
+    "2.\tStatistical analysis - By sharing the seed, others can replicate and verify the results.\n",
     "3.\tTeaching simulation - Allows the students to see the same results (and possibly, odd results) for the material\n",
     "\n",
     "\n",
