--- a/IntroductionToPython/15.2-FileOperations.ipynb
+++ b/IntroductionToPython/15.2-FileOperations.ipynb
@@ -12,7 +12,7 @@
     "Pythonʼs view of files and directories derives from the Unix/Linux operating system variants.  [Overview of the Unix File System](https://web.archive.org/web/20210419161551/https://homepages.uc.edu/~thomam/Intro_Unix_Text/File_System.html)<br>\n",
     "(You should know the material on the \"Overview of the Unix File System\" page.)\n",
     "\n",
-    "Python's [io](https://docs.python.org/3/library/io.html) module provides support for files.\n",
+    "Python's [os](https://docs.python.org/3/library/os.html) module provides support for file operations and interacting with the operating system.\n",
     "\n",
     "Python's functionality largely mirrors that as provided by various command-line programs and the underlying standard C libraries upon which Python is implemented.\n"
    ]
