--- a/IntroductionToPython/15.5-Recursion.ipynb
+++ b/IntroductionToPython/15.5-Recursion.ipynb
@@ -344,9 +344,7 @@
     "- initialize any parameters or auxiliary variables. Often, we may want to keep track of the stack depth ourselves\n",
     "- handle any exceptions and errors. (We cover these soon.)\n",
     "\n",
-    "For these situations, use _wrapper functions_ that can perform these tasks.\n",
-    "\n",
-    "For Python, we can nest functions within other functions. Doing this prevents code outside of our function from calling the nested functions. In other languages like Java and C++, we can make the actual recursive function private to prevent direct calls."
+    "For these situations, use a _wrapper function_ to perform these tasks. A _wrapper function_ exists where the primary purpose is to call another routine.  In this situation, we write and then utilize a wrapper function to validate the parameters and then to correctly call the recursive function.  One of the other features of Python is the ability to nest function(s) within a function. This nesting prevents code code outside of our function from calling the nested functions. So external code in this situation cannot directly call the recursive function."
    ]
   },
   {
@@ -356,18 +354,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "\n",
     "def say_hello(num_times):\n",
     "    def say_hello_increasing(count, max_count):\n",
     "        if (count == max_count):\n",
     "            return\n",
     "        say_hello_increasing(count + 1, max_count)\n",
     "        print('hello')\n",
-    "        \n",
+    "    \n",
+    "    if (num_times < 0):\n",
+    "        print(\"num_times cannot be negative\")\n",
+    "        return\n",
+    "    if (num_times >= sys.getrecursionlimit()): \n",
+    "        print(\"num_times greater than or equal to the recursion limit\")\n",
+    "        return\n",
     "    say_hello_increasing(0, num_times)\n",
     "    \n",
-    "\n",
-    "\n",
-    "say_hello(5)"
+    "say_hello(-1)\n",
+    "say_hello(5)\n",
+    "say_hello(sys.getrecursionlimit())"
    ]
   },
   {
@@ -375,6 +381,8 @@
    "id": "48646229",
    "metadata": {},
    "source": [
+    "What is the actual value for sys.getrecursionlimit() in your environment?  What is the largest value you can successfully pass to say_hello without causing an error?  Why does this discrepancy exist?\n",
+    "\n",
     "Notice that the inner function `say_hello_increasing()` needed to be defined first.  Try re-writing the code such that the function definition occurs last.  What error occurred?"
    ]
   },
