--- a/IntroductionToPython/17-Validation,ExceptionsAndErrorHandling.ipynb
+++ b/IntroductionToPython/17-Validation,ExceptionsAndErrorHandling.ipynb
@@ -867,6 +867,139 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7203c59a",
+   "metadata": {},
+   "source": [
+    "## Preconditions, Postconditions, Invariants, and Assertions\n",
+    "While this section title seems long, it is ultimately the same underlying principle at work in different ways - checking if a condition holds or not. \n",
+    "\n",
+    "Building on top of the documentation for an algorithm, we can add two items: _preconditions_ to the routine and _postconditions_ of the routine.\n",
+    "\n",
+    "_Preconditions_ are conditions guaranteed to be true before the routine. These conditions\n",
+    "include such things as inputs in appropriate ranges and files initialized and ready for\n",
+    "input/output. _Preconditions_ are the client code’s obligations to the routine that it \n",
+    "calls. For example, if we create a shape such as a circle or a square, the radius or \n",
+    "side length must be a nonnegative number. As we write code, we should check that these\n",
+    "preconditions hold. If not, an appropriate error handling technique is needed, such as\n",
+    "logging the issue, returning an error code, or raising an exception.\n",
+    "\n",
+    "_Postconditions_ are the conditions(items) guaranteed to be true before control returns to the caller. These conditions are the routine’s/class’s obligations to the code that uses it. For example, if a routine adds an element to a list, a postcondition is that the list is not empty. Or, more strongly, the length of a list is one more than the length of that list when the routine started.\n",
+    "\n",
+    "_Invariants_ are a set of conditions(assumptions) that must always hold true during the life of a program (or, more narrowly, by the life of an object). You can consider this to be a combined precondition and postcondition - it must be valid before and after a call to a method. However, while executing a routine that changes the relevant state/attributes for the condition, the invariant may not necessarily be true. Invariants should hold during the object’s lifetime - from the end of its constructor to the end of its destructor. (We will present the object's lifcycle  in a few notebooks.) As an example, the radius of a circle must always be nonnegative. We also apply the term invariant to a sequence of operations. In this user, the invariant is the set of conditions that remain true during these operations.\n",
+    "\n",
+    "_Assertions_ are a series of statements used during development that allows a program to check itself as it runs. Think of an assertion as a statement of fact<sup>[*](https://www.lexico.com/en/definition/assertion)</sup>. As such, if an assertion fails, our assumption is incorrect, or the code produces an incorrect value. We use _assertions_ as sanity checks that conditions hold true and to document assumptions we have made in the code explicitly. Primarily, we use _assertions_ as a development/debugging tool - it is possible to turn off these checks completely. Do not use assert statements for necessary checks (data validation, authorization). However, as we will see in a couple of notebooks, we will also use assertions for our tests."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cff38e24",
+   "metadata": {},
+   "source": [
+    "### Assertion Example\n",
+    "Suppose we build an online stock market system and need to compute the purchase price of a stock. As part of the business rules, the company can offer incentives such as a discount on the transaction cost for special promotions such as new customer enticement.\n",
+    "<pre>\n",
+    "def compute_charge(num_shares, price_per_share, commission_charge, bonus_offer):\n",
+    "    amount = num_shares * price_per_share + commission_charge - bonus_offer\n",
+    "    return amount\n",
+    "</pre>\n",
+    "However, what happens if `bonus_offer > num_shares * price_per_share + commission_charge`? Do we owe the client money due to the client buying stocks?  In this situation, we need an assertion that the amount is positive.  We could also add another assertion that the `amount` is less than or equal to the <code>num_shares * price_per_share + commission_charge</code>. (This covers negative values passed in `bonus_offer`.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc40790f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_charge(num_shares, price_per_share, commission_charge, bonus_offer):\n",
+    "    amount = num_shares * price_per_share + commission_charge - bonus_offer\n",
+    "    assert 0 <= amount <= num_shares * price_per_share + commission_charge\n",
+    "    return amount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72408632",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compute_charge(100, 10.00, 7.95, 200.00)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a4093d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compute_charge(100, 10.00, 7.95, -200.00)  # Will raise an AssertionError as the bonus offer is negative"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10df1093",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compute_charge(100, 10.00, 7.95, 1500.00)  # raises an assertion error as amount < 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2a5bb85",
+   "metadata": {},
+   "source": [
+    "Fixing the last condition requires a check to be added to compute_charge that prevents a negative. For a negative bonus offer, we could choose among several different possibilities. We could add validation for each of the function's parameters. We could also simply not choose to perform any validation as the call came from within our program."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb3ba44e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_charge(num_shares, price_per_share, commission_charge, bonus_offer):\n",
+    "    if bonus_offer < 0:\n",
+    "        raise ValueError(\"bonus_offer cannot be negative\")\n",
+    "    amount = num_shares * price_per_share + commission_charge - bonus_offer\n",
+    "    if amount < 0:\n",
+    "        amount = 0\n",
+    "    assert 0 <= amount <= num_shares * price_per_share + commission_charge\n",
+    "    return amount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4be2817",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compute_charge(100, 10.00, 7.95, 1500.00) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3a669b8",
+   "metadata": {},
+   "source": [
+    "### Assertion Syntax\n",
+    "The assert syntax follows this format:\n",
+    "<pre>\n",
+    "    assert <i>expression</i>[, <i>message</i>]\n",
+    "</pre>\n",
+    "At a minimum, assert needs an expression that evaluates to True or False. The second portion is optional and provides an error message if the assertion fails.\n",
+    "\n",
+    "Assertions are an underutilized tool in many programmers’ arsenals. By documenting assumptions, asserts can help programmers identify situations that violate those assumptions. Pay careful attention, though, when using assertions - they are not a mechanism for detecting run-time errors, as they can be globally disabled through the Python interpreter. Also, do not use asserts to implement application functionality (e.g., data validation)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e2818360",
    "metadata": {},
    "source": [
