--- a/IntroductionToPython/20-Testing.ipynb
+++ b/IntroductionToPython/20-Testing.ipynb
@@ -671,6 +671,36 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8d0abf23",
+   "metadata": {},
+   "source": [
+    "## Other Testing Approaches\n",
+    "You should also be familiar with regression testing and reviews.\n",
+    "\n",
+    "### Regression Testing\n",
+    "_Regression Testing_ is the re-execution of a set of tests to ensure that some change has not created an an intended side effect through breaking other parts of the system.  Generally, regression testing will be performed on system after any type of a change prior to deployment or distribution.  These changes include, but are not limited to fixing defects, new functionality, and configuration changes.  Ideally, we want to perform these regression test automatically as discussed in this notebook with testing frameworks.  Quite frequently, project teams will establish regression tests to execute at specific times - such as \n",
+    "- after every successful compile (may be problematic for large systems due to execution time)\n",
+    "- as part of the code check-in process to a code management system.\n",
+    "- regular schedule (nightly/weekly)\n",
+    "\n",
+    "In certain circumstances, manual verification may be necessary.  However, as with testing in general, manual regression testing is strongly discouraged due to the repeat effort involved.\n",
+    "\n",
+    "\n",
+    "### Reviews\n",
+    "Reviews are a prevalent quality assurance technique performed at any point in the software development process. For instance, during the requirements and design phases, team meetings may be held to walk through the proposed documents to examine them for both completeness and correctness.\n",
+    "\n",
+    "Developers and project teams widely utilize code reviews to improve software quality. By having another developer examine the source directly, that developer may be able to find issues missed by the original developer or suggest alternative improvements. In addition, an ancillary benefit exists in that reviewers become familiar with the changes, increasing their knowledge of the system. Several different ways exist to perform code reviews:\n",
+    "- Informal\n",
+    "- Inspection Meeting\n",
+    "- Change-based\n",
+    "- Tool-supported\n",
+    "\n",
+    "For informal reviews, developers either collaborate through email or in person to walk through the code. Inspection meetings are much more formal. In these cases, a developer will send out a notice with the proposed changes. Reviewers will then inspect the changes. A meeting will then occur where the developer will walk through the code and the reviewers will provide commentary. In change-based reviews as part of the process of updating code in a code management system (e.g., Git), other developers will review the changes and provide commentary in the change(pull) request or issue log. Reviewers can also utilize tools to support their reviews. These tools perform static analysis of the code to find potential problems (e.g., an input value used before any validation) or check the source code to ensure the code follows appropriate style guidelines.\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ba572743",
    "metadata": {},
