--- a/IntroductionToPython/36-RegularExpressions.ipynb
+++ b/IntroductionToPython/36-RegularExpressions.ipynb
@@ -95,19 +95,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "14d28ba2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "32\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "line = \"can we search for the specified value in the string?\"\n",
     "print(\"value\" in line)\n",
@@ -136,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5289f456",
    "metadata": {},
    "outputs": [],
@@ -154,23 +145,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ae32baa1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Type returned: <class 're.Match'>\n",
-      "Value matched: value\n",
-      "String tested: can we search for the specified value in the string?\n",
-      "Regular Expression: re.compile('value')\n",
-      "Start position of the match: 32\n",
-      "End position of the match: 37\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "line = \"can we search for the specified value in the string?\"\n",
     "m = re.search('value',line)\n",
@@ -217,18 +195,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "256324a2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 was\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "line = \"It was the best of times, it was the worst of times, it was the age of wisdom\"\n",
     "m = re.search(\"was\",line)\n",
@@ -255,19 +225,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "5119e6da",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n",
-      "['was', 'was', 'was']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = re.findall(\"was\",line)\n",
     "print(type(result))\n",
@@ -284,20 +245,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "457334f8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 was\n",
-      "29 was\n",
-      "56 was\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for m in re.finditer(\"was\",line):\n",
     "    print(m.start(), m.group())"
@@ -314,19 +265,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "2d234ca5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n",
-      "['It ', ' the best of times, it ', ' the worst of times, it ', ' the age of wisdom']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = re.split(\"was\",line)\n",
     "print(type(result))\n",
@@ -344,18 +286,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "45352ea3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It is the best of times, it is the worst of times, it is the age of wisdom\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = re.sub(\"was\",\"is\",line)\n",
     "print(result)"
@@ -412,19 +346,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "0341e4ad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<re.Match object; span=(31, 33), match='٩٢'>\n",
-      "['Here are some non ASCII digits ', '.  Where they found?']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The special characters are the arabic representation for 9 and 2.  \n",
     "# The regular expression matches any sequence of continuous digits (one or more)\n",
@@ -445,20 +370,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "1db964fe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['here', 'here']\n",
-      "0 here\n",
-      "54 here\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#finds the string \"here\" where it is a complete word.\n",
     "print(re.findall(\"\\\\bhere\\\\b\",\"here are some non ASCII digits ٩٢.  Where they found? here they are there\"))\n",
@@ -479,18 +394,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "5dd09cbf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It ws th bst f tms, t ws th wrst f tms, t ws th g f wsdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "line = \"It was the best of times, it was the worst of times, it was the age of wisdom\"\n",
     "result = re.sub(\"[aeiouy]\",\"\",line)\n",
@@ -514,20 +421,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "c4ce0380",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 T\n",
-      "2 w\n",
-      "5 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for m in re.finditer(\"[a-zA-Z]\",\"T3w^#s\"):\n",
     "    print(m.start(), m.group())"
@@ -543,24 +440,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "311f7032",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 T\n",
-      "1 [\n",
-      "3 w\n",
-      "4 ^\n",
-      "6 s\n",
-      "7 $\n",
-      "8 ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Demonstrates the need to escape \\ and ], but not the other metacharacters\n",
     "for m in re.finditer(\"[a-z$A-Z^[\\]]\",\"T[3w^#s$]\"):\n",
@@ -577,19 +460,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "e39298a1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 3\n",
-      "5 #\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Demonstrates negating/complementing the previous example\n",
     "for m in re.finditer(\"[^a-z$A-Z^[\\]]\",\"T[3w^#s$]\"):\n",
@@ -609,21 +483,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "a84624f1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 Sally\n",
-      "25 Sandy\n",
-      "31 Beach\n",
-      "38 I\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for m in re.finditer(\"[A-Z][a-z]*\",\"Sally sells seashells at Sandy Beach. I like her inventory.\"):\n",
     "    print(m.start(), m.group())"
@@ -639,20 +502,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "218b5c12",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 Sally\n",
-      "25 Sandy\n",
-      "31 Beach\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for m in re.finditer(\"[A-Z][a-z]+\",\"Sally sells seashells at Sandy Beach. I like her inventory.\"):\n",
     "    print(m.start(), m.group())"
@@ -670,26 +523,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "903abb5a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 Sally\n",
-      "6 sells\n",
-      "12 seashells\n",
-      "22 at\n",
-      "25 Sandy\n",
-      "31 Beach\n",
-      "40 like\n",
-      "45 her\n",
-      "49 inventory\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for m in re.finditer(\"[A-Z]?[a-z]+\",\"Sally sells seashells at Sandy Beach. I like her inventory.\"):\n",
     "    print(m.start(), m.group())"
@@ -705,20 +542,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "9093e167",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 Sa\n",
-      "25 Sa\n",
-      "31 Be\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for m in re.finditer(\"[A-Z][a-z]+?\",\"Sally sells seashells at Sandy Beach. I like her inventory.\"):\n",
     "    print(m.start(), m.group())"
@@ -736,18 +563,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "6c59086b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 12345\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for m in re.finditer(r\"\\b[0-9]{5}\\b\",\"1234 12345 123456\"):\n",
     "    print(m.start(), m.group())"
@@ -763,22 +582,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "f1fccf2e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 Sally\n",
-      "6 sells\n",
-      "25 Sandy\n",
-      "31 Beach\n",
-      "40 like\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for m in re.finditer(r\"\\b\\w{4,6}\\b\",\"Sally sells seashells at Sandy Beach. I like her inventory.\"):\n",
     "    print(m.start(), m.group())"
@@ -799,20 +606,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "2063122a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 all\n",
-      "7 ell\n",
-      "17 ell\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# demonstrates sequencing.  any vowel followed by ll\n",
     "for m in re.finditer(\"[aeiouy]ll\",\"Sally sells seashells at Sandy Beach. I like her inventory.\"):\n",
@@ -821,21 +618,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "714726be",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6 abababab\n",
-      "15 ab\n",
-      "22 ab\n",
-      "36 ababab\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# find repeating patterns of \"ab\"\n",
     "for m in re.finditer(\"(ab)+\",\"Sally abababab abba aaabbbaaa aaaa bababab\"):\n",
@@ -844,21 +630,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "b52b1694",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No match: hello\n",
-      "0 python\n",
-      "0 crumble\n",
-      "No match: superfragilistic\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test that a string is 6-10 characters in length and only consists of \"word\" characters\n",
     "test_strings = [\"hello\", \"python\", \"crumble\",\"superfragilistic\"]\n",
@@ -872,19 +647,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "86c2055f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11 red\n",
-      "44 black\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "colors=\"red|blue|green|yellow|white|black|purple\"\n",
     "for m in re.finditer(colors,\"The little red corvette drove fast down the black asphalt.\"):\n",
@@ -904,19 +670,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "973db289",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11 RED\n",
-      "44 BlacK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "colors=\"red|blue|green|yellow|white|black|purple\"\n",
     "for m in re.finditer(colors,\"The little RED corvette drove fast down the BlacK asphalt.\",flags=re.IGNORECASE):\n",
@@ -925,19 +682,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "2d9c12ba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n",
-      "<re.Match object; span=(28, 31), match='123'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The special characters are the arabic representation for 9 and 2.  \n",
     "# The regular expression matches any sequence of continuous digits (one or more).\n",
@@ -959,19 +707,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "8bc16c6b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11 RED\n",
-      "44 BlacK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pattern = re.compile(\"red|blue|green|yellow|white|black|purple\",flags=re.IGNORECASE)\n",
     "for m in pattern.finditer(\"The little RED corvette drove fast down the BlacK asphalt.\"):\n",
@@ -990,21 +729,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "id": "fe593550",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(919)867-5308\n",
-      "919\n",
-      "867\n",
-      "5308\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "phone_pattern = re.compile(\"\\((\\d\\d\\d)\\)(\\d\\d\\d)-(\\d\\d\\d\\d)\")  # matches a US Phone number formatted (xxx)xxx-xxxx\n",
     "m = phone_pattern.search(\"My phone number is (919)867-5309 and my name is Jenny\")\n",
@@ -1025,20 +753,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "id": "ce8587b9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "clark.kent@superheros.org\n",
-      "clark.kent\n",
-      "superheros.org\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "urlpattern=re.compile(\"([a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+)@([a-zA-Z0-9]([a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(\\.[a-zA-Z0-9]([a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*)\",flags=re.IGNORECASE)\n",
     "m = urlpattern.search(\"from: clark.kent@superheros.org <Clark Kent>\")\n",
@@ -1060,18 +778,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "64e5838f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The little some color corvette drove fast down the some color asphalt.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "colors=\"red|blue|green|yellow|white|black|purple\"\n",
     "color_pattern = re.compile(colors)\n",
@@ -1089,18 +799,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "e53d6619",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My phone number is (919)XXX-867 and my name is Jenny\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "phone_pattern = re.compile(\"\\((\\d\\d\\d)\\)(\\d\\d\\d)-(\\d\\d\\d\\d)\")  # matches a US Phone number formatted (xxx)xxx-xxxx\n",
     "line = phone_pattern.sub(r\"(\\1)XXX-\\2\",\"My phone number is (919)867-5309 and my name is Jenny\")\n",
@@ -1117,21 +819,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "63e3d027",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Tom Clancy's book, <i>The Hunt for Red October</i>, launched a massive and lucarative career.\""
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p = re.compile('_(.*)_')\n",
     "p.sub(r'<i>\\1</i>','Tom Clancy\\'s book, _The Hunt for Red October_, launched a massive and lucarative career.')"
@@ -1227,7 +918,16 @@
    "id": "592da1dc",
    "metadata": {},
    "source": [
-    "## Exercises"
+    "## Exercises\n",
+    "1. A typing mistakes of those who learned typing on actual typewriters is to use two spaces after a period. With modern, proportionally-spaced fonts, this spacing is no longer needed.  Write a function `eliminate_spaces(value)` that condenses any multiple spaces into a single space and then returns the resulting value. \"  test   \" returns \" test \".  \"Once   upon a    time\" returns \"Once upon a time\".  You must use a regular expression within the method.\n",
+    "\n",
+    "2. Write a function 'extract_urls(text)' that returns all URLs from the parameter. The urls should be in the format of `http[s]://value1.domain`.  The `value1` can repeat one or more times.  `domain` must be lowercase ASCII Letters (e.g., a-z) and have between 2 and 6 characters in length.  (Note: This last rule is just a convenience.  The complete list of top level domain names is available at http://www.iana.org/domains/root/db)\n",
+    "\n",
+    "3. Write a function `convert_date_format(text)` that converts a string (representing a date) in the format of \"yyyy-mm-dd\" to \"dd-mm-yyyy\".  You should use group to extract the values.\n",
+    "\n",
+    "4. Write a function `extract_ticker_symbols(text)` that returns a set of all ticker symbols from a string.  A ticker string must meet these conditions: 1) Be uppercase ASCII letter (A-Z).  2) Between 1 and 5 characters in length.  3) have a word boundary at the start and the end. \n",
+    "\n",
+    "5. Write a function `extract_adverbs(text)` that finds all words ending in \"ly\".  The return value should be a list of tuples.  Each tuple should have the start position, end position and the word  (in that order)."
    ]
   },
   {
