--- a/IntroductionToPython/08-FormattingStrings.ipynb
+++ b/IntroductionToPython/08-FormattingStrings.ipynb
@@ -77,7 +77,7 @@
    "source": [
     "To format the values placed into the strings, you will need to apply special formatting codes.  These codes follow this syntax: `{[name]:[fill][alignment][sign][minwidth][group][.][maxchars]type}`\n",
     "- An optional name that can either specify the position order or a named argument. \n",
-    "- An initial colon (':').\n",
+    "- An initial colon (':') that is required if any formatting codes exist.\n",
     "- An optional fill character (default ' ') to pad the value string if it is shorter than minwidth.\n",
     "- An optional alignment character:\n",
     "  - '<' left (the default)\n",
@@ -141,25 +141,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "dd441095",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "123456789012345678901234567890\n",
-      "64.987120\n",
-      "           64.987120\n",
-      "          +64.987120\n",
-      "0000000000064.987120\n",
-      "         64.98712000\n",
-      "               64.99\n",
-      "64.987120           \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gain = 64.98712\n",
     "print(\"123456789012345678901234567890\")\n",
@@ -209,7 +194,7 @@
     "   - You should perform at least 5 formatting substitutions.\n",
     "\n",
     "\n",
-    "2. Write a script that defines a float variable and then prints out the number in the format of \\\\$\\*\\*\\*XX.XX, where the leading asterisks are used to make the length of the output 10 characters and the precision is two digits.\n",
+    "2. Write function format_check_amount(value) that takes a float arguments and then returns a string in the format of \\\\$\\*\\*\\*XX.XX, where the leading asterisks are used to make the length of the output 10 characters and the precision is two digits.\n",
     "\n",
     "\n",
     "3. Write a function with the following declaration - <code>def print_receipt(subtotal, tax_rate, tip_rate)</code><br>That prints the following:\n",
@@ -228,7 +213,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -243,6 +228,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "44a9cdcbdccbf05a880e90d2e6fe72470baab4d1b82472d890be0596ed887a6b"
+   }
   }
  },
  "nbformat": 4,
